force-app/main/default/objects/MandatoryManagementFieldsMaster__c/MandatoryManagementFieldsMaster__c.object-meta.xml
<CustomObject>
    <label>必須管理項目マスタ</label>
    <nameField>
        <label>項目名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>