force-app/main/default/objects/MandatoryManagementFieldsMaster__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>必須管理項目マスタ</relationshipLabel>
    <relationshipName>MandatoryManagementFieldsMaster</relationshipName>
    <type>Lookup</type>
</CustomField>