force-app/main/default/objects/MandatoryManagementFieldsMaster__c/fields/OperationType__c.field-meta.xml
<CustomField>
    <fullName>OperationType__c</fullName>
    <label>業務種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>入替</fullName>
            </value>
            <value>
                <fullName>解約</fullName>
            </value>
            <value>
                <fullName>入替・解約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>