force-app/main/default/objects/MandatoryManagementFieldsMaster__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>入力ルール</label>
    <type>TextArea</type>
</CustomField>